src/model/data.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    start: peg$parsestart,
  };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = "ship";
  const peg$c1 = "outfit";
  const peg$c2 = "gun";
  const peg$c3 = "turret";
  const peg$c4 = "bay";
  const peg$c5 = "remove bays";
  const peg$c6 = "sprite";
  const peg$c7 = "thumbnail";
  const peg$c8 = "attributes";
  const peg$c9 = "add attributes";
  const peg$c10 = "weapon";
  const peg$c11 = "-";
  const peg$c12 = ".";
  const peg$c13 = "\"";
  const peg$c14 = "`";
  const peg$c15 = "\t";
  const peg$c16 = " ";
  const peg$c17 = "\n";

  const peg$r0 = /^[a-zA-Z0-9_]/;
  const peg$r1 = /^[0-9]/;
  const peg$r2 = /^[^"]/;
  const peg$r3 = /^[^`]/;

  const peg$e0 = peg$anyExpectation();
  const peg$e1 = peg$literalExpectation("ship", false);
  const peg$e2 = peg$literalExpectation("outfit", false);
  const peg$e3 = peg$literalExpectation("gun", false);
  const peg$e4 = peg$literalExpectation("turret", false);
  const peg$e5 = peg$literalExpectation("bay", false);
  const peg$e6 = peg$literalExpectation("remove bays", false);
  const peg$e7 = peg$literalExpectation("sprite", false);
  const peg$e8 = peg$literalExpectation("thumbnail", false);
  const peg$e9 = peg$literalExpectation("attributes", false);
  const peg$e10 = peg$literalExpectation("add attributes", false);
  const peg$e11 = peg$literalExpectation("weapon", false);
  const peg$e12 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e13 = peg$literalExpectation("-", false);
  const peg$e14 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e15 = peg$literalExpectation(".", false);
  const peg$e16 = peg$literalExpectation("\"", false);
  const peg$e17 = peg$classExpectation(["\""], true, false, false);
  const peg$e18 = peg$literalExpectation("`", false);
  const peg$e19 = peg$classExpectation(["`"], true, false, false);
  const peg$e20 = peg$literalExpectation("\t", false);
  const peg$e21 = peg$literalExpectation(" ", false);
  const peg$e22 = peg$literalExpectation("\n", false);

  function peg$f0(items) {
    return items.reduce(
        ({ ships, outfits, variants }, it) => {
            if(it) {
                const map = { 'ship': ships, 'variant': variants, 'outfit': outfits };
                const { type, attributes, ...item } = it;
                map[type][item.name] = { ...item, ...attributes };
            }
            return { ships, outfits, variants };
        },
        { ships: {}, outfits: {}, variants: {} });
  }
  function peg$f1() {    return { 'gun ports': 0, 'turret mounts': 0, 'fighter bays': 0, attributes: [] };  }
  function peg$f2(vars, name, attr) {
    if(attr) {
        if(attr == 'gun') ++vars['gun ports'];
        else if(attr == 'turret') ++vars['turret mounts'];
        else if(attr == 'bay') ++vars['fighter bays'];
        else vars.attributes.push(...(Array.isArray(attr)? attr : [attr]));
    }
  }
  function peg$f3(vars, name) {
    vars.attributes = Object.fromEntries(vars.attributes.filter(a => a))
    return {
        type: 'ship',
        name,
        ...vars,
    };
  }
  function peg$f4() {    return { 'gun ports': null, 'turret mounts': null, 'fighter bays': null, attributes: [] };  }
  function peg$f5(vars, base, name, attr) {
    if(attr) {
        if(attr == 'gun' || attr == 'turret') {
            vars['gun ports'] ??= 0;
            vars['turret mounts'] ??= 0;
        } else if(attr == 'bay') {
            vars['fighter bays'] ??= 0;
        }
        if(attr == 'gun') ++vars['gun ports'];
        else if(attr == 'turret') ++vars['turret mounts'];
        else if(attr == 'bay') ++vars['fighter bays'];
        else if(attr == 'remove bays') vars['fighter bays'] = 0;
        else vars.attributes.push(...(Array.isArray(attr)? attr : [attr]));
    }
  }
  function peg$f6(vars, base, name, attributes) {
    vars.attributes = Object.fromEntries(vars.attributes.filter(a => a))
    return {
        type: 'variant',
        base,
        name,
        ...vars,
    };
  }
  function peg$f7() {    return [];  }
  function peg$f8(attributes, name, attr) {
    if(attr) {
        attributes.push(...(Array.isArray(attr)? attr : [attr]));
    }
  }
  function peg$f9(attributes, name) {
    attributes = Object.fromEntries(attributes.filter(a => a))
    return {
        type: 'outfit',
        name,
        attributes,
    };
  }
  function peg$f10(line) {
    return line;
  }
  function peg$f11(n) {    return Number(n);  }
  function peg$f12() {    return true;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsevariant();
    if (s2 === peg$FAILED) {
      s2 = peg$parseship();
      if (s2 === peg$FAILED) {
        s2 = peg$parseoutfit();
        if (s2 === peg$FAILED) {
          s2 = peg$currPos;
          s3 = peg$parseother_line();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseeol();
            if (s4 !== peg$FAILED) {
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsevariant();
      if (s2 === peg$FAILED) {
        s2 = peg$parseship();
        if (s2 === peg$FAILED) {
          s2 = peg$parseoutfit();
          if (s2 === peg$FAILED) {
            s2 = peg$currPos;
            s3 = peg$parseother_line();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseeol();
              if (s4 !== peg$FAILED) {
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          }
        }
      }
    }
    s2 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s3 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    peg$silentFails--;
    if (s3 === peg$FAILED) {
      s2 = undefined;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseship() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsedecl();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s1;
      s2 = peg$f1();
    }
    s1 = s2;
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c0) {
        s2 = peg$c0;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsestring();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseeol();
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$currPos;
              s8 = peg$parsetab();
              if (s8 !== peg$FAILED) {
                s9 = peg$parseship_line();
                if (s9 !== peg$FAILED) {
                  s10 = peg$parseeol();
                  if (s10 !== peg$FAILED) {
                    peg$savedPos = s7;
                    s7 = peg$f2(s1, s4, s9);
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$currPos;
                s8 = peg$parsetab();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseship_line();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseeol();
                    if (s10 !== peg$FAILED) {
                      peg$savedPos = s7;
                      s7 = peg$f2(s1, s4, s9);
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              }
              peg$savedPos = s0;
              s0 = peg$f3(s1, s4);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsevariant() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsedecl();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s1;
      s2 = peg$f4();
    }
    s1 = s2;
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c0) {
        s2 = peg$c0;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsestring();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsestring();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseeol();
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$currPos;
                  s10 = peg$parsetab();
                  if (s10 !== peg$FAILED) {
                    s11 = peg$parsevariant_line();
                    if (s11 !== peg$FAILED) {
                      s12 = peg$parseeol();
                      if (s12 !== peg$FAILED) {
                        peg$savedPos = s9;
                        s9 = peg$f5(s1, s4, s6, s11);
                      } else {
                        peg$currPos = s9;
                        s9 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                  while (s9 !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$currPos;
                    s10 = peg$parsetab();
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parsevariant_line();
                      if (s11 !== peg$FAILED) {
                        s12 = peg$parseeol();
                        if (s12 !== peg$FAILED) {
                          peg$savedPos = s9;
                          s9 = peg$f5(s1, s4, s6, s11);
                        } else {
                          peg$currPos = s9;
                          s9 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s9;
                        s9 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                  }
                  peg$savedPos = s0;
                  s0 = peg$f6(s1, s4, s6, s8);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseoutfit() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsedecl();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s1;
      s2 = peg$f7();
    }
    s1 = s2;
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 6;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsestring();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseeol();
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$currPos;
              s8 = peg$parsetab();
              if (s8 !== peg$FAILED) {
                s9 = peg$parseoutfit_line();
                if (s9 !== peg$FAILED) {
                  s10 = peg$parseeol();
                  if (s10 !== peg$FAILED) {
                    peg$savedPos = s7;
                    s7 = peg$f8(s1, s4, s9);
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$currPos;
                s8 = peg$parsetab();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseoutfit_line();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseeol();
                    if (s10 !== peg$FAILED) {
                      peg$savedPos = s7;
                      s7 = peg$f8(s1, s4, s9);
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              }
              peg$savedPos = s0;
              s0 = peg$f9(s1, s4);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseship_line() {
    let s0, s1, s2;

    s0 = peg$parsegun();
    if (s0 === peg$FAILED) {
      s0 = peg$parseturret();
      if (s0 === peg$FAILED) {
        s0 = peg$parsebay();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = [];
          s2 = peg$parsesprite();
          while (s2 !== peg$FAILED) {
            s1.push(s2);
            if (s1.length >= 1) {
              s2 = peg$FAILED;
            } else {
              s2 = peg$parsesprite();
            }
          }
          if (s1.length < 1) {
            peg$currPos = s0;
            s0 = peg$FAILED;
          } else {
            s0 = s1;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parsethumbnail();
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              if (s1.length >= 1) {
                s2 = peg$FAILED;
              } else {
                s2 = peg$parsethumbnail();
              }
            }
            if (s1.length < 1) {
              peg$currPos = s0;
              s0 = peg$FAILED;
            } else {
              s0 = s1;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$parseship_attributes();
              if (s0 === peg$FAILED) {
                s0 = peg$parseother_line();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsevariant_line() {
    let s0, s1, s2;

    s0 = peg$parsegun();
    if (s0 === peg$FAILED) {
      s0 = peg$parseturret();
      if (s0 === peg$FAILED) {
        s0 = peg$parsebay();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = [];
          s2 = peg$parsesprite();
          while (s2 !== peg$FAILED) {
            s1.push(s2);
            if (s1.length >= 1) {
              s2 = peg$FAILED;
            } else {
              s2 = peg$parsesprite();
            }
          }
          if (s1.length < 1) {
            peg$currPos = s0;
            s0 = peg$FAILED;
          } else {
            s0 = s1;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parsethumbnail();
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              if (s1.length >= 1) {
                s2 = peg$FAILED;
              } else {
                s2 = peg$parsethumbnail();
              }
            }
            if (s1.length < 1) {
              peg$currPos = s0;
              s0 = peg$FAILED;
            } else {
              s0 = s1;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$parseremove_bays();
              if (s0 === peg$FAILED) {
                s0 = peg$parsevariant_attributes();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseother_line();
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsegun() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenum();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsenum();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseother_line();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseturret() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenum();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsenum();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseother_line();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsebay() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;
